--- a/1.Setup.html
+++ b/1.Setup.html
@@ -44,10 +44,7 @@ Documentations
 
 <body>
   <p style="color: blue;">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
-    aspernatur earum eius aut facere a similique excepturi nam enim inventore
-    magni aliquid, distinctio rerum adipisci commodi accusamus tempora eligendi
-    omnis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium rerum obcaecati recusandae porro nemo ea ut non reiciendis eligendi repudiandae, dolorum totam. Veritatis libero deserunt necessitatibus temporibus eligendi eaque sit!
   </p>
 </body>
 
