--- a/2.Introduction.html
+++ b/2.Introduction.html
@@ -49,13 +49,25 @@ Gold medal:
 </head>
 
 <body>
+  <div>
+    Text in the div
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates temporibus error rerum excepturi porro!
+      Labore dolor beatae, tempora commodi hic quas consequuntur laudantium quasi eaque illo voluptatem neque eum vero.
+    </p>
+  </div>
+
+  <p>This is not a child of div</p>
 </body>
 
 </html>
 
 <style>
   div {
-    background-color: rgba(112, 34, 34, 0.685);
+    color: red;
+  }
+
+  p {
+    color: green;
   }
 </style>
