--- a/3.Selectors.html
+++ b/3.Selectors.html
@@ -19,7 +19,8 @@
 <body>
   <p>One</p>
   <p class="two">Two</p>
-  <a href="/1. Setup.html" id="three">Three</a>
+  <a href="/1.Setup.html" id="three">Three</a>
+  <a href="/2.Introduction.html" id="three">Three</a>
   <a>Four</a>
   <p>Five</p>
 </body>
@@ -46,7 +47,7 @@
     color: salmon;
   } */
 
-  /* a[href="/1. Setup.html"] {
+  /* a[href="/1.Setup.html"] {
     color: springgreen;
   } */
 
