Second lessons changes

--- a/3.Selectors.html
+++ b/3.Selectors.html
@@ -10,20 +10,20 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <p>One</p>
-  <p class="two">Two</p>
-  <a href="/1.Setup.html" id="three">Three</a>
-  <a href="/2.Introduction.html" id="three">Three</a>
-  <a>Four</a>
-  <p>Five</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p>One</p>
+    <p class="two">Two</p>
+    <a href="/1.Setup.html" id="three">Three</a>
+    <a href="/2.Introduction.html" id="three">Three</a>
+    <a>Four</a>
+    <p>Five</p>
+  </body>
 </html>
 
 <style>
@@ -54,5 +54,4 @@
   /* a {
     color: springgreen !important;
   } */
-
 </style>
