--- a/5.PseudoClasses.html
+++ b/5.PseudoClasses.html
@@ -29,7 +29,7 @@ special state of the selected element(s). -->
 </html>
 
 <style>
-  /* button {
+  button {
     display: block;
     width: 150px;
     height: 50px;
@@ -41,7 +41,7 @@ special state of the selected element(s). -->
     font-size: 22px;
     box-shadow: 0 0 6px 2px rgba(0, 0, 0, .2);
     outline: none;
-  } */
+  }
 
   /* button:hover {
     background-color: black;
@@ -78,4 +78,6 @@ special state of the selected element(s). -->
   /* li:last-child {
     color: #FA0;
   } */
+
+  /* :root {} */
 </style>
