--- a/6.Combinators.html
+++ b/6.Combinators.html
@@ -4,29 +4,27 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div>
-    <div>One</div>
-    <div class="two">Two</div>
-    <div class="three">Three</div>
-    <div class="four">Three</div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>
+      <div>One</div>
+      <div class="two">Two</div>
+      <div class="three">Three</div>
+      <div class="four">Three</div>
+    </div>
 
-  <br>
+    <br />
 
-  <div>
-    Second Div
-  </div>
+    <div>Second Div</div>
 
-  <a href="/1. Introduction.html">Introduction</a>
-  <a href="/2. Box Model.html">Box model</a>
-</body>
+    <a href="/1. Introduction.html">Introduction</a>
+    <a href="/2. Box Model.html">Box model</a>
+  </body>
 </html>
 
 <style>
@@ -55,5 +53,7 @@
     color: green;
   } */
 
-  /* div, asd {} */
+  /* div, a {
+    background-color: green;
+  } */
 </style>
