--- a/7.Fonts.html
+++ b/7.Fonts.html
@@ -16,29 +16,19 @@
 <style>
   p {
     /* font-size: 32px; */
-    /* font-size: 2em; */
-    /* font-size: 2rem; */
-    /* font-size: 200%; */
-    /* font-size: 2vw; */
-    /* font-size: 2vh; */
     /* letter-spacing: 10px; */
     /* word-spacing: 10px; */
-    /* text-decoration: underline; */
-    /* text-decoration: overline; */
-    /* text-decoration: line-through; */
-    /* text-align: left; */
-    /* text-align: right; */
+    /* text-decoration: none; */
     /* text-align: justify; */
-    /* text-align: center; */
     /* text-align-last: center; */
     /* line-height: 2; */
     /* text-indent: 20; */
     /* font-family: serif; */
     /* font-family: sans-serif; */
-    /* font-family: monospace; */
+    /* font-family: fantasy; */
     /* font-family: monospace fantasy serif; */
     /* font-weight: bold; */
-    /* font-weight: 900; */
+    /* font-weight: 100; */
     /* font-style: italic; */
     /* text-shadow: 0 0 5px red; */
     /* text-transform: uppercase; */
