--- a/8.Units.html
+++ b/8.Units.html
@@ -26,9 +26,30 @@ Relative Units
   </head>
 
   <body>
-    <div></div>
+    <div>
+      <div class="child">sad</div>
+    </div>
   </body>
 </html>
 
 <style>
+  * {
+    margin: 10px 80px 10px 90px;
+    padding: 0;
+    font-size: 16px;
+    box-sizing: border-box;
+  }
+
+  div {
+    width: 100px;
+    height: 100px;
+    border: 2px solid green;
+  }
+
+  .child {
+    background-color: red;
+    width: 50vw;
+    height: 50vh;
+    /* min-height: 100vh; */
+  }
 </style>
