--- a/9.Background.html
+++ b/9.Background.html
@@ -13,21 +13,25 @@
 
 <style>
   div {
-    width: 800px;
-    height: 800px;
-    border: 2px solid black;
+    width: 400px;
+    height: 400px;
+    /* border: 2px solid black; */
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
     /* background-color: red; */
-    background-image: url('avatar.png');
+    /* border-radius: 50%; */
+    /* background-image: url('avatar-v.png'); */
     background-repeat: no-repeat;
     /* background-position: 0 0; */
     /* background-position: left bottom; */
-    /* background-position: 50% 50%; */
+    /* background-position: 20% 70%; */
     /* background-position: center; */
     /* background-size: 100px auto; */
     /* background-size: 100px 100%; */
     /* background-size: 100% 100%; */
     /* background-size: contain; */
     /* background-size: cover; */
-    /* background-image: linear-gradient(red 50% 60%, green); */
+    /* background-image: linear-gradient(red 10% 90%, yellow); */
   }
 </style>
