--- a/14.CalcFunction.html
+++ b/14.CalcFunction.html
@@ -1,5 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div></div>
+</body>
+</html>
+
 <style>
-  body {
-    width: calc(100%/3);
+  div {
+    width: calc(100px/3 * 2 + 10% - 20px);
+    height: 100px;
+    background-color: red;
   }
 </style>
